--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <meta property="og:url" content="https://seusite.com.br">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="pt_BR">
+	
+	<!-- ICOFONT -->
+	<link rel="icon" type="image/png" href="icofont.png">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
