--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                 <p style="color: var(--text-gray); margin-bottom: 2.5rem;">
                     Venha experimentar o melhor de nossas tábuas, frios e charcutaria, além de cafés e bebidas especiais. Feita para grandes momentos. Somente com agendamento em Campinas/SP.
                 </p>
-                <button class="btn" onclick="openBistroModal()">Realizar Agendamento</button>
+                <button class="btn" onClick="openBistroModal()">Realizar Agendamento</button>
             </div>
         </div>
     </section>
@@ -1006,7 +1006,7 @@
             message += `-----------------------------------\n`;
             message += `_Aguardo confirmação e chave PIX._`;
 
-            window.open(`https://wa.me/5519998618906?text=${encodeURIComponent(message)}`, '_blank');
+            window.open(`https://wa.me/5519993835111?text=${encodeURIComponent(message)}`, '_blank');
             closeCheckoutModal();
         }
 
@@ -1053,7 +1053,7 @@
             msg += `-----------------------------------\n`;
             msg += `_Ciente do aviso de no mínimo 48 horas de antecedência._`;
 
-            window.open(`https://wa.me/5519998618906?text=${encodeURIComponent(msg)}`, '_blank');
+            window.open(`https://wa.me/5519993835111?text=${encodeURIComponent(msg)}`, '_blank');
             closeBistroModal();
         }
 
