--- a/index.html
+++ b/index.html
@@ -376,8 +376,8 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>A Arte do Sabor Artesanal</h1>
-            <p>Curadoria exclusiva de charcutaria, pães de fermentação natural e tábuas para momentos únicos.</p>
+            <h1>Artesanal | Único | SOLO</h1>
+            <p>Curadoria artesanal de tábuas de frios, cestas de café da manhã e chocolates selecionados. Entregas Campinas e região.</p>
             <a href="#kits-area" class="btn">Explorar Menu</a>
         </div>
     </section>
@@ -387,13 +387,13 @@
             <div class="about-text">
                 <div class="section-title" style="text-align: left; margin-bottom: 2rem;">
                     <h2>O Ateliê SOLO</h2>
-                    <p>Feito à mão, com alma.</p>
+                    <p>A Arte da Pausa.</p>
                 </div>
                 <p style="color: var(--text-gray); margin-bottom: 1rem;">
-                    Nascemos da paixão por reunir pessoas em torno da boa comida. No SOLO Ateliê Artesanal, cada tábua é uma composição pensada para despertar sentidos.
+                    O <b>Solo Ateliê Artesanal</b> nasceu do desejo de transformar o simples ato de comer em um ritual de presença. Em um mundo que corre o tempo todo, convidamos você a parar.
                 </p>
                 <p style="color: var(--text-gray);">
-                    Selecionamos os melhores queijos, curamos nossa própria charcutaria e assamos pães que respeitam o tempo. Mais do que produtos, entregamos uma experiência gastronômica completa na sua casa.
+                    Cada queijo, cada chocolate, cada fruta selecionada e cada detalhe um convite para celebrar o agora. Não entregamos apenas uma simples cesta; entregamos o cenário para memórias inesquecíveis..
                 </p>
             </div>
             <div class="about-img">
@@ -404,7 +404,7 @@
 
     <section id="kits-area">
         <div class="section-title">
-            <h2>Kits & Tábuas Prontas</h2>
+            <h2>Menu de Experiências SOLO</h2>
             <p>Experiências completas cuidadosamente selecionadas. Clique para ver opções.</p>
         </div>
         <div id="kits" class="menu-grid">
