--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:locale" content="pt_BR">
 	
 	<!-- ICOFONT -->
-	<link rel="icon" type="image/png" href="icofont.png">
+	<link rel="icon" type="image/png" href="../WEBSITE PERALLY/icofont.png">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -342,7 +342,7 @@
             </button>
 
             <a href="#" class="logo-container">
-                <img src="https://ssgmoradadecaboclos.kinghost.net/SOLO/1.png" alt="SOLO Ateliê Artesanal" class="logo-img">
+                <img src="1.png" alt="SOLO Ateliê Artesanal" class="logo-img">
             </a>
 
             <ul class="nav-links">
@@ -488,7 +488,7 @@
             </button>
             
             <h2 style="color: var(--primary); text-align: center; margin-bottom: 1.5rem;">Finalizar Pedido</h2>
-            <p style="text-align: center; margin-bottom: 1.5rem; color: #666;">Informe seus dados para enviarmos o pedido para o WhatsApp da loja.</p>
+            <p style="text-align: center; margin-bottom: 1.5rem; color: #666;">Solicitamos 48hs de antecedência para encomendas. A confirmação do Pedido e o valor do frete serão informados via WhatsApp da loja.</p>
             
             <div class="form-group">
                 <label>Seu Nome *</label>
