--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             <ul class="nav-links">
                 <li><a href="#home">Início</a></li>
                 <li><a href="#about">O Ateliê</a></li>
-                <li><a href="#kits-area">Kits Prontos</a></li>
+                <li><a href="#kits-area">Experiências SOLO</a></li>
                 <li><a href="#custom-area" class="highlight-menu">Monte o Seu</a></li>
                 <li><a href="#bistro">Bistrô</a></li>
                 <li><a href="#contact">Contato</a></li>
@@ -377,7 +377,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Artesanal | Único | SOLO</h1>
-            <p>Curadoria artesanal de tábuas de frios, cestas de café da manhã e chocolates selecionados. Entregas Campinas e região.</p>
+            <p>Curadoria artesanal de queijos, frios & charcutaria, cestas de café da manhã e chocolates selecionados. Entregas em Campinas e região.</p>
             <a href="#kits-area" class="btn">Explorar Menu</a>
         </div>
     </section>
@@ -393,7 +393,7 @@
                     O <b>Solo Ateliê Artesanal</b> nasceu do desejo de transformar o simples ato de comer em um ritual de presença. Em um mundo que corre o tempo todo, convidamos você a parar.
                 </p>
                 <p style="color: var(--text-gray);">
-                    Cada queijo, cada chocolate, cada fruta selecionada e cada detalhe um convite para celebrar o agora. Não entregamos apenas uma simples cesta; entregamos o cenário para memórias inesquecíveis..
+                    Cada queijo, cada chocolate, cada fruta selecionada e cada detalhe um convite para celebrar o agora. Não entregamos apenas uma simples cesta, entregamos o cenário perfeito para memórias inesquecíveis.
                 </p>
             </div>
             <div class="about-img">
@@ -414,7 +414,7 @@
     <section id="custom-area">
         <div class="section-title">
             <h2>Monte sua experiência SOLO</h2>
-            <p>Escolha item por item e personalize sua experiência</p>
+            <p>Escolha item por item e personalize sua experiência.</p>
         </div>
         <div id="categories" class="menu-grid">
             </div>
